Refs #7491: Added right margin to inline form-item-operation elements to ensure adequate gap between select and submit button.

--- a/css/admin.overrides.less
+++ b/css/admin.overrides.less
@@ -19,3 +19,9 @@ tr.even .form-item {
 .select2-container {
   min-width: 100px;
 }
+
+.container-inline {
+  .form-item-operation {
+    margin-right: 5.0em;
+  }
+}
